--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
+bcrypt==2.0.0
+cffi==1.3.1
 Flask==0.10.1
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+pycparser==2.14
+requests==2.8.1
+six==1.10.0
+SQLAlchemy==1.0.9
 Werkzeug==0.11.2
 wheel==0.24.0
+WTForms==2.0.2
