--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ bcrypt==2.0.0
 cffi==1.3.1
 Flask==0.10.1
 Flask-SQLAlchemy==2.1
+Flask-Testing==0.4.2
 Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 pycparser==2.14
+pytest==2.8.5
 requests==2.8.1
 six==1.10.0
 SQLAlchemy==1.0.9
